--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.ssl.enabled=false
+
+cloudinary.cloud_name=dmrp4gxvd
+cloudinary.api_key=877311972655994
+cloudinary.api_secret=uQTSz7uDyJe4z3pLhdEW3DE4_hY
