--- a/pom.xml
+++ b/pom.xml
@@ -97,8 +97,20 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-vision</artifactId>
+			<version>3.37.0</version> <!-- Hoặc mới hơn -->
+		</dependency>
 
+		<!-- Translate API v3 -->
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-translate</artifactId>
+			<version>2.30.0</version> <!-- Cập nhật phiên bản -->
+		</dependency>
+	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
